syntax = "proto3";

import "google/protobuf/empty.proto";

package msg;

option go_package = "github.com/caldog20/go-overlay/msg";

message Remote {
  string uuid = 1;
  string vpn_ip = 2;
  string remote = 3;
}

message RegisterRequest {
  string hostname = 1;
  string port = 2;
}

message RegisterReply {
  string vpn_ip = 1;
  string uuid = 2;
}

message DeregisterRequest {
  string uuid = 1;
}

message RemoteListRequest {
  string uuid = 1;
}

message RemoteListReply {
  repeated Remote remotes = 1;
}

message WhoIsIPRequest {
  string vpn_ip = 1;
}

message WhoIsIPReply {
  Remote remote = 1;
}

service ControlService {
  rpc Register(RegisterRequest) returns (RegisterReply) {}
  rpc Deregister(DeregisterRequest) returns (google.protobuf.Empty) {}
  rpc WhoIsIp(WhoIsIPRequest) returns (WhoIsIPReply) {}
  rpc RemoteList(RemoteListRequest) returns (RemoteListReply) {}
  //  rpc Punch(PunchRequest) returns (google.protobuf.Empty) {}
//  rpc PunchNotifier(PunchSubscribe) returns (stream PunchNotification) {}
}
